plugins {
    id 'java'
    id 'io.freefair.lombok' version '8.14.4'
    id 'com.gradleup.shadow' version '8.3.11'
}

group = 'top.srcrs'
version = '2.0.0'

java {
    sourceCompatibility = JavaVersion.VERSION_17
    targetCompatibility = JavaVersion.VERSION_17
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
    options.release = 17
}

tasks.withType(Javadoc).configureEach {
    options.encoding = 'UTF-8'
}

repositories {
    mavenCentral()
    // 国内网络环境下的镜像，mavenCentral 不可达时兜底
    maven { url = 'https://maven.aliyun.com/repository/public/' }
}

dependencies {
    implementation 'com.alibaba.fastjson2:fastjson2:2.0.62'
    implementation 'org.apache.httpcomponents:httpclient:4.5.14'
    implementation 'ch.qos.logback:logback-classic:1.5.38'
    implementation 'org.yaml:snakeyaml:2.6'

    testImplementation platform('org.junit:junit-bom:5.14.4')
    testImplementation 'org.junit.jupiter:junit-jupiter'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

jar {
    manifest {
        attributes('Main-Class': 'top.srcrs.BiliStart')
    }
}

shadowJar {
    archiveClassifier = 'all'
    mergeServiceFiles()
}

tasks.named('assemble') {
    dependsOn tasks.named('shadowJar')
}

test {
    useJUnitPlatform()
    testLogging {
        events 'passed', 'skipped', 'failed'
        exceptionFormat = 'full'
    }
}

tasks.register('runMain', JavaExec) {
    group = 'application'
    description = '执行一次 B 站每日任务'
    mainClass = 'top.srcrs.BiliStart'
    classpath = sourceSets.main.runtimeClasspath
}
